[gd_scene load_steps=4 format=3 uid="uid://yay30cu3dpjp"]

[ext_resource type="Script" path="res://scripts/menue.gd" id="1_h6arm"]
[ext_resource type="FontFile" uid="uid://3nxm8sis26d1" path="res://assets/fonts/PixelOperator8.ttf" id="2_1j4gt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i22bk"]
bg_color = Color(0.235278, 0.636463, 0.536368, 0.827451)

[node name="Menue" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h6arm")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(28.8, 16.2)
theme_override_styles/panel = SubResource("StyleBoxFlat_i22bk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -54.0
offset_right = 53.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="Level1_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
theme_override_fonts/font = ExtResource("2_1j4gt")
text = "Level 1"

[node name="Level2_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1j4gt")
text = "Level 2"

[node name="Level3_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1j4gt")
text = "Level 3"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
focus_neighbor_bottom = NodePath("../Level1_Button")
theme_override_fonts/font = ExtResource("2_1j4gt")
text = "Beenden"

[connection signal="pressed" from="VBoxContainer/Level1_Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Level2_Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Level3_Button" to="." method="_on_level_3_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
